# RecordLinkage

./: Dockerfile  LICENSE  README.md  data_proccessor.py  data_reader.py  docker-compose.yaml  requirements.txt  solution_cpp.md
docker-entrypoint-initdb.d/: 00_initial_datasets_tables.sh
solution/: data_processor.py
solution_cpp/: CMakeLists.txt  data_processor.cpp  data_processor.h  data_reader.cpp  data_reader.h  main.cpp
